Added notAvsB subdirectory. Also short writeup on some of the interesting modeling results. Next step, get efficient individual fits working -- treat each ppt as a separate dataset and run 1000 chtc chunks on it.

--- a/Manuscripts/cogsci-journal/cogsci-journal.tex
+++ b/Manuscripts/cogsci-journal/cogsci-journal.tex
@@ -46,12 +46,11 @@ Similarity, Contrast, and Representativeness in Categorization
 \vfill
 Joseph L. Austerweil\textsuperscript{1+}
 Shi Xian Liew\textsuperscript{1+},
-Nolan Conaway\textsuperscript{2}, 
-and Kenneth J. Kurtz\textsuperscript{3}
+Nolan Conaway\textsuperscript{1}, 
+and Kenneth J. Kurtz\textsuperscript{2}
 \\[\baselineskip]
 \textsuperscript{1}Department of Psychology, University of Wisconsin-Madison, Madison, WI, USA\\
-\textsuperscript{2}Shutterstock, New York, NY, USA\\
-\textsuperscript{3}Department of Psychology, Binghamton University, Binghamton, NY, USA
+\textsuperscript{2}Department of Psychology, Binghamton University, Binghamton, NY, USA
 \\[1in]
 
 \vfill
@@ -1849,7 +1848,7 @@ defined for this feature.
       \includegraphics[width=.6\textwidth]{figs/e3-distcent.pdf}
       \caption{Empirical mean probabilities of generating first Beta exemplars
         at each point of distance from the center of the feature space.
-        Distances are normalized such that 0 represented the center and 1
+        Distances are normalized such that 0 represents the center and 1
         represents the edge. Plot for the toroidal feature of circle stimuli is
         not presented because a center is not defined for this feature.}
     \label{fig:e3-distcent}
@@ -2335,7 +2334,7 @@ category contrast is of fundamental importance to categorization.
 \section{Acknowledgments} Previous versions of this work were presented at the
 Thirty-Ninth Annual Conference of the Cognitive Science Society and Forty-Ninth
 Annual Meeting of the Society for Mathematical Psychology. Support for this
-research was provided by the Office of the VCRGE at the UW - Madison with
+research was provided by the Office of the VCRGE at the UW-Madison with
 funding from the WARF and the Vilas Life Cycle Fellowship. We thank Charles Kemp
 for feedback on a previous version of this manuscript. We also thank him and
 Alan Jern for providing code and data.
