getting towards compiling in normal latex environment

--- a/Manuscripts/cbb2023/sn-article.tex
+++ b/Manuscripts/cbb2023/sn-article.tex
@@ -558,7 +558,7 @@ categories when generating a new exemplar.
 
 \begin{figure}
 	\begin{center} 
-    \includegraphics[width=0.95\textwidth]{fig1.eps}
+    \includegraphics[width=0.95\textwidth]{figs/fig1.eps}
       \caption{The effect of weights on PACKER generation of a category `B' example, following exposure
         to one member of category `A' and one member of category `B'.
         Predictions are shown for three different parameterizations (differing
@@ -743,7 +743,7 @@ predictions.
 
 
 \begin{figure}
-	\begin{center} \includegraphics{fig2.eps}
+	\begin{center} \includegraphics{figs/fig2.eps}
 		\caption{Generation of a category `B' example, following exposure
 to one member of category `A' and one member of category `B'. Predictions are
 shown for (a) the original hierarchical Bayesian model and (b) the
@@ -1505,7 +1505,7 @@ conforming to a row- or column-like arrangement. See Figure
 performance.
 
 \begin{figure}
-    \begin{center} \includegraphics[width=0.8\textwidth]{fig13.eps}
+    \begin{center} \includegraphics[width=0.8\textwidth]{figs/fig13.eps}
     \caption{PACKER generation of a category `B' example, following exposure to
 one member of category `A' and one member of category `B'. Predictions are shown
 for different attention settings: {\em (a)} Increased weighting of the X-axis.
